--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,13 @@
-<my-app></my-app>
-    
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Weather Demo</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <my-app></my-app>
+  </body>
+</html>
